--- a/gallery.html
+++ b/gallery.html
@@ -92,7 +92,7 @@
     <header class="mb-3">
       <nav class="navbar navbar-expand-lg navbar-light secondary-color">
         <div class="container">
-          <a class="navbar-brand fw-bold" href="index.html"
+          <a class="navbar-brand fw-bold" style="color: #333" href="index.html"
             ><img
               src="assets/logo.jpg"
               alt="logo"
