--- a/about.html
+++ b/about.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TenderMothers - About Us</title>
-    <link href="/bootstrap-5/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="styles/font_awesome/css/all.min.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
     <link rel="stylesheet" href="styles/styles.css" />
     <style>
       .hero-image {
@@ -293,7 +299,11 @@
         >
           Donate
         </button>
-        <button class="btn primary-color text-light btn-donate btn-lg">
+        <button
+          class="btn primary-color text-light btn-donate btn-lg"
+          data-bs-toggle="modal"
+          data-bs-target="#volunteerModal"
+        >
           Volunteer
         </button>
       </div>
@@ -371,8 +381,62 @@
       </div>
     </div>
 
+    <!-- Volunteer Modal -->
+    <div
+      class="modal fade"
+      id="volunteerModal"
+      tabindex="-1"
+      aria-labelledby="volunteerModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="volunteerModalLabel">
+              Volunteer & Support Form
+            </h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form id="volunteerForm">
+              <div class="mb-3">
+                <label for="name" class="form-label">Full Name</label>
+                <input type="text" class="form-control" id="name" required />
+              </div>
+              <div class="mb-3">
+                <label for="email" class="form-label">Email Address</label>
+                <input type="email" class="form-control" id="email" required />
+              </div>
+              <div class="mb-3">
+                <label for="phone" class="form-label">Phone Number</label>
+                <input type="tel" class="form-control" id="phone" required />
+              </div>
+              <div class="mb-3">
+                <label for="message" class="form-label"
+                  >How would you like to support?</label
+                >
+                <textarea
+                  class="form-control"
+                  id="message"
+                  rows="3"
+                  placeholder="Describe how you want to help..."
+                  required
+                ></textarea>
+              </div>
+              <button type="submit" class="btn btn-custom w-100">Submit</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Footer -->
-    <footer class="bg-light py-4">
+    <footer class="bg-light mt-5 py-5">
       <div class="container">
         <div class="row">
           <div class="col-md-4">
@@ -384,9 +448,25 @@
           </div>
           <div class="col-md-4">
             <h5 class="fw-bold">Follow Us</h5>
-            <a href="#" class="me-2"><i class="fab fa-facebook"></i></a>
-            <a href="#" class="me-2"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a
+              href="https://www.facebook.com/profile.php?id=100078362796031&mibextid=LQQJ4d"
+              class="me-3"
+              ><i class="fab fa-facebook fs-3"></i
+            ></a>
+            <a href="" class="me-3"><i class="fab fa-twitter fs-3"></i></a>
+            <a href="https://www.youtube.com/@TenderMothers" class="me-3"
+              ><i class="fab fa-youtube fs-3 text-danger"></i
+            ></a>
+
+            <a
+              href="https://www.tiktok.com/@tendermothers?_t=8pbu3n4bdRd&_r=1"
+              class="me-3"
+              ><img
+                src="assets/tik-tok.png"
+                class="img-fluid mb-2"
+                style="width: 6%"
+                alt="tiktok icon"
+            /></a>
           </div>
           <div class="col-md-4">
             <h5 class="fw-bold">Keep in touch</h5>
@@ -402,9 +482,30 @@
             </form>
           </div>
         </div>
+        <hr />
+        <div class="text-center">
+          <p>&copy; 2025 TenderMothers Organization. All rights reserved.</p>
+        </div>
       </div>
     </footer>
+
     <script>
+      // submit to email
+      document
+        .getElementById("volunteerForm")
+        .addEventListener("submit", function (event) {
+          event.preventDefault();
+
+          let name = document.getElementById("name").value;
+          let email = document.getElementById("email").value;
+          let phone = document.getElementById("phone").value;
+          let message = document.getElementById("message").value;
+
+          let mailtoLink = `mailto:tendermothersorg@gmail.com?subject=Volunteer Request&body=Name: ${name}%0D%0AEmail: ${email}%0D%0APhone: ${phone}%0D%0ASupport Message: ${message}`;
+
+          window.location.href = mailtoLink;
+        });
+
       const counters = document.querySelectorAll(".stat-number");
       const speed = 300;
 
@@ -446,6 +547,6 @@
       });
     </script>
     <script src="js/index.js"></script>
-    <script src="/bootstrap-5/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
