--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tender Mothers - Contact Us</title>
-    <link href="/bootstrap-5/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="styles/font_awesome/css/all.min.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
     <link rel="stylesheet" href="styles/styles.css" />
 
     <style>
@@ -16,10 +22,7 @@
       h2 {
         font-size: clamp(30px, 5vw, 60px);
       }
-      .navbar-brand,
-      .navbar-nav .nav-link {
-        color: #ffffff;
-      }
+
       .contact-section {
         padding: 50px 0;
       }
@@ -261,6 +264,6 @@
         </div>
       </div>
     </footer>
-    <script src="/bootstrap-5/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
