--- a/gallery.html
+++ b/gallery.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TenderMothers-Gallery</title>
-    <link href="/bootstrap-5/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="styles/font_awesome/css/all.min.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
     <link rel="stylesheet" href="styles/styles.css" />
     <style>
       #gallery-container {
@@ -204,6 +210,6 @@
       </div>
     </footer>
 
-    <script src="/bootstrap-5/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
