--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tender Mothers</title>
-    <link href="/bootstrap-5/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="styles/font_awesome/css/all.min.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+
     <link rel="stylesheet" href="styles/styles.css" />
 
     <style>
@@ -97,6 +104,19 @@
       .get-involved-card {
         background-color: rgb(230, 230, 227);
         border: none;
+      }
+
+      /* Initial hidden state */
+      .float-in {
+        opacity: 0;
+        transform: translateY(50px);
+        transition: opacity 0.8s ease-out, transform 0.8s ease-out;
+      }
+
+      /* Active state when in view */
+      .float-in.visible {
+        opacity: 1;
+        transform: translateY(0);
       }
     </style>
     <script src="js/index.js"></script>
@@ -472,14 +492,9 @@
             <div
               class="get-involved-card bg-light"
               data-bs-toggle="modal"
-              data-bs-target="#SupportModal"
+              data-bs-target="#volunteerModal"
             >
               <center>
-                <!-- <img
-                  src="assets/prof-pic.JPG"
-                  class="card-img-top img-fluid w-50"
-                  alt="Team Member 1"
-                /> -->
                 <i class="fas fa-microphone fa-3x my-3 mt-5"></i>
                 <h5 class="card-title py-3 fw-bold">VOLUNTEERING</h5>
               </center>
@@ -507,14 +522,9 @@
             <div
               class="get-involved-card bg-light"
               data-bs-toggle="modal"
-              data-bs-target="#SupportModal"
+              data-bs-target="#volunteerModal"
             >
               <center>
-                <!-- <img
-                  src="assets/prof-pic.JPG"
-                  class="card-img-top img-fluid w-50"
-                  alt="Team Member 1"
-                /> -->
                 <i class="fas fa-campground fa-3x my-3 mt-5"></i>
                 <h5 class="card-title py-3 fw-bold">SUPPORTING</h5>
               </center>
@@ -598,67 +608,55 @@
       </div>
     </div>
 
-    <!-- Support/Volunteer modal -->
+    <!-- Volunteer Modal -->
     <div
       class="modal fade"
-      id="SupportModal"
+      id="volunteerModal"
       tabindex="-1"
-      role="dialog"
-      aria-labelledby="SupportModalLabel"
+      aria-labelledby="volunteerModalLabel"
       aria-hidden="true"
     >
-      <div class="modal-dialog">
+      <div class="modal-dialog modal-lg">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title fw-bold" id="SupportModalLabel">
-              Offer Support To TenderMothers
-            </h4>
-
-            <div
-              type="button"
-              class="close"
-              data-bs-dismiss="modal"
-              aria-hidden="true"
-            >
-              &times;
-            </div>
-          </div>
-          <div class="modal-body">
-            <input
-              class="donation-modal-input"
-              type="text"
-              placeholder="Name"
-            />
-            <input
-              class="donation-modal-input"
-              type="text"
-              placeholder="Email"
-            />
-            <input
-              class="donation-modal-input"
-              type="text"
-              placeholder="What kind of support do you want to offer?"
-            />
-
-            <div>
-              <div
-                id="submit-btn"
-                class="btn btn-primary btn-lg mt-3 fs-5 text-center"
-                @click="submitDetails"
-              >
-                <span class="spinner-border d-none" role="status"></span>
-                <span>Submit</span>
-              </div>
-            </div>
-          </div>
-          <div class="modal-footer">
+            <h5 class="modal-title" id="volunteerModalLabel">
+              Volunteer & Support Form
+            </h5>
             <button
               type="button"
-              class="donate-modal-close-btn btn btn-default"
+              class="btn-close"
               data-bs-dismiss="modal"
-            >
-              Close
-            </button>
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form id="volunteerForm">
+              <div class="mb-3">
+                <label for="name" class="form-label">Full Name</label>
+                <input type="text" class="form-control" id="name" required />
+              </div>
+              <div class="mb-3">
+                <label for="email" class="form-label">Email Address</label>
+                <input type="email" class="form-control" id="email" required />
+              </div>
+              <div class="mb-3">
+                <label for="phone" class="form-label">Phone Number</label>
+                <input type="tel" class="form-control" id="phone" required />
+              </div>
+              <div class="mb-3">
+                <label for="message" class="form-label"
+                  >How would you like to support?</label
+                >
+                <textarea
+                  class="form-control"
+                  id="message"
+                  rows="3"
+                  placeholder="Describe how you want to help..."
+                  required
+                ></textarea>
+              </div>
+              <button type="submit" class="btn btn-custom w-100">Submit</button>
+            </form>
           </div>
         </div>
       </div>
@@ -719,6 +717,51 @@
     </footer>
 
     <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const observer = new IntersectionObserver(
+          (entries, observer) => {
+            entries.forEach((entry) => {
+              if (entry.isIntersecting) {
+                entry.target.classList.add("visible");
+                observer.unobserve(entry.target); // Stops observing after activation
+              }
+            });
+          },
+          { threshold: 0.2 } // Adjust visibility threshold (20% of element visible)
+        );
+
+        // Select all elements to apply the effect
+        document
+          .querySelectorAll(
+            "#recent-activity-1-title, #recent-activity-1-text, #recent-activity-1-image, \
+                                    #recent-activity-2-title, #recent-activity-2-text, #recent-activity-2-image, \
+                                    #recent-activity-3-title, #recent-activity-3-text, #recent-activity-3-image"
+          )
+          .forEach((el) => {
+            el.classList.add("float-in");
+            observer.observe(el);
+          });
+      });
+    </script>
+
+    <script>
+      // submit email
+      document
+        .getElementById("volunteerForm")
+        .addEventListener("submit", function (event) {
+          event.preventDefault();
+
+          let name = document.getElementById("name").value;
+          let email = document.getElementById("email").value;
+          let phone = document.getElementById("phone").value;
+          let message = document.getElementById("message").value;
+
+          let mailtoLink = `mailto:tendermothersorg@gmail.com?subject=Volunteer Request&body=Name: ${name}%0D%0AEmail: ${email}%0D%0APhone: ${phone}%0D%0ASupport Message: ${message}`;
+
+          window.location.href = mailtoLink;
+        });
+
+      // float effect for the services offered
       const observer = new IntersectionObserver(
         (entries) => {
           entries.forEach((entry) => {
@@ -737,6 +780,6 @@
       observer.observe(document.querySelector(".card-container"));
     </script>
 
-    <script src="/bootstrap-5/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
