fixed assets loading

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="styles/styles.css" />
     <style>
       .hero-image {
-        background-image: url("/assets/team-work.png");
+        background-image: url("assets/team-work.png");
         height: 750px;
         background-position: center;
         background-repeat: no-repeat;
