--- a/gallery.html
+++ b/gallery.html
@@ -92,7 +92,7 @@
         }
       }
     </style>
-    <script src="/js/index.js"></script>
+    <script src="js/index.js"></script>
   </head>
   <body onload="loadImages(20)">
     <header class="mb-3">
