--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           </ol>
           <div class="carousel-item active">
             <img
-              src="/assets/banner-img-3.webp"
+              src="assets/banner-img-3.webp"
               class="d-block w-100 carousel-image"
               alt="Charity Image 1"
             />
@@ -208,7 +208,7 @@
           </div>
           <div class="carousel-item">
             <img
-              src="/assets/eye-for-ebony.webp"
+              src="assets/eye-for-ebony.webp"
               class="d-block w-100 carousel-image"
               alt="Charity Image 2"
             />
@@ -260,7 +260,7 @@
               <div class="card">
                 <center>
                   <img
-                    src="/assets/mosquito.png"
+                    src="assets/mosquito.png"
                     class="card-img-top img-fluid w-25"
                     alt="..."
                   />
